All Apis for blogify done

--- a/flaskBlog/templates/index.html
+++ b/flaskBlog/templates/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>Blogify Backend</h1>
+    <h2>End Points</h1>
+    <h3>1- /add-new-post</h3>
+    <p>- To add new the posts</p>
+    <p>- Method: Post</p>
+    <h3>2- /get-all-posts</h3>
+    <p>- To get all the posts</p>
+    <p>- Method: Get</p>
+    <h3>3- /post/id</h3>
+    <p>- To get the post with specific id</p>
+    <p>- Method: Get</p>
+    <h2>JSON Example</h1>
+    <p>{{json}}</p>
 </body>
 </html>
